--- a/style.css
+++ b/style.css
@@ -1,8 +1,102 @@
 #container {
-  margin-top: 20%;
 }
 
 #tree {
-  margin-left:-155px;
-  width:50%;
+
+  width: 60%;
+  position: fixed;
+  top: 220px;
+  right: 600px;
+}
+
+.blossom {
+  position: absolute;
+}
+
+
+#petal0.blossom {
+  left: 540px;
+  bottom: 415px;
+  z-index: 1;
+
+  width: 1.5%;
+
+}
+
+#petal1.blossom {
+  left: 550px;
+  bottom: 413px;
+  z-index: 2;
+
+  width: 1.5%;
+
+  -ms-transform: rotate(45deg); /* IE 9 */
+   -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+   transform: rotate(45deg);
+}
+
+#petal2.blossom {
+  left: 550px;
+  bottom: 405px;
+  z-index: 3;
+
+  width: 1.5%;
+  -ms-transform: rotate(90deg); /* IE 9 */
+   -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
+   transform: rotate(90deg);
+}
+
+#petal3.blossom {
+  left: 547px;
+  bottom: 395px;
+  z-index: 4;
+
+  width: 1.5%;
+  -ms-transform: rotate(135deg); /* IE 9 */
+   -webkit-transform: rotate(135deg); /* Chrome, Safari, Opera */
+   transform: rotate(135deg);
+}
+
+#petal4.blossom {
+  left: 540px;
+  bottom: 393px;
+  z-index: 5;
+
+  width: 1.5%;
+  -ms-transform: rotate(180deg); /* IE 9 */
+   -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+   transform: rotate(180deg);
+}
+
+#petal5.blossom {
+  left: 530px;
+  bottom: 396px;
+  z-index: 6;
+
+  width: 1.5%;
+  -ms-transform: rotate(225deg); /* IE 9 */
+   -webkit-transform: rotate(225deg); /* Chrome, Safari, Opera */
+   transform: rotate(225deg);
+}
+
+#petal6.blossom {
+  left: 527px;
+  bottom: 406px;
+  z-index: 7;
+
+  width: 1.5%;
+  -ms-transform: rotate(270deg); /* IE 9 */
+   -webkit-transform: rotate(270deg); /* Chrome, Safari, Opera */
+   transform: rotate(270deg);
+}
+
+#petal7.blossom {
+  left: 529px;
+  bottom: 413px;
+  z-index: 7;
+
+  width: 1.5%;
+  -ms-transform: rotate(315deg); /* IE 9 */
+   -webkit-transform: rotate(315deg); /* Chrome, Safari, Opera */
+   transform: rotate(315deg);
 }
