--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 
 #tree {
   position: relative;
+  top: 19em;
+  right: 4em;
 }
 
 .blossom {
@@ -16,15 +18,15 @@
 /* 1st Blossom */
 
 #petal0.blossom {
-  left: 20em;
-  top: 13em;
+  right: 11em;
+  bottom: 2em;
   z-index: 1;
 
 }
 
 #petal1.blossom {
-  left: 550px;
-  bottom: 413px;
+  right: 12em;
+  bottom: 1.8em;
   z-index: 2;
 
   -ms-transform: rotate(45deg); /* IE 9 */
@@ -33,8 +35,9 @@
 }
 
 #petal2.blossom {
-  left: 550px;
-  bottom: 405px;
+  right: 13.2em;
+  bottom: 1.3em;
+
   z-index: 3;
   -ms-transform: rotate(90deg); /* IE 9 */
    -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
