--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ body {
 }
 
 #petal21.blossom {
-  left: 10em;
+  left: 10.3em;
   top: 20.6em;
   -ms-transform: rotate(225deg); /* IE 9 */
    -webkit-transform: rotate(225deg); /* Chrome, Safari, Opera */
@@ -216,61 +216,61 @@ body {
 /* 4th Blossom */
 
 #petal24.blossom {
-  right: 49.4em;
-  bottom: -2.55em;
+  left: 11em;
+  top: 18.8em;
 }
 
 #petal25.blossom {
-  right: 50.4em;
-  bottom: -2.9em;
+  left: 11.5em;
+  top: 19em;
   -ms-transform: rotate(45deg); /* IE 9 */
    -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
    transform: rotate(45deg);
 }
 
 #petal26.blossom {
-  right: 51.8em;
-  bottom: -3.3em;
+  left: 11.5em;
+  top: 19.6em;
   -ms-transform: rotate(90deg); /* IE 9 */
    -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
    transform: rotate(90deg);
 }
 
 #petal27.blossom {
-  right: 51.8em;
-  bottom: -3.7em;
+  left: 11.5em;
+  top: 20em;
   -ms-transform: rotate(135deg); /* IE 9 */
    -webkit-transform: rotate(135deg); /* Chrome, Safari, Opera */
    transform: rotate(135deg);
 }
 
 #petal28.blossom {
-  right: 41.9em;
-  bottom: -3.79em;
+  left: 11em;
+  top: 20.3em;
   -ms-transform: rotate(180deg); /* IE 9 */
    -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
    transform: rotate(180deg);
 }
 
 #petal29.blossom {
-  right: 43.9em;
-  bottom: -3.79em;
+  left: 10.3em;
+  top: 20em;
   -ms-transform: rotate(225deg); /* IE 9 */
    -webkit-transform: rotate(225deg); /* Chrome, Safari, Opera */
    transform: rotate(225deg);
 }
 
 #petal30.blossom {
-  right: 45.5em;
-  bottom: -3.39em;
+  left: 10em;
+  top: 19.5em;
   -ms-transform: rotate(270deg); /* IE 9 */
    -webkit-transform: rotate(270deg); /* Chrome, Safari, Opera */
    transform: rotate(270deg);
 }
 
 #petal31.blossom {
-  right: 46.8em;
-  bottom: -2.9em;
+  left: 10.3em;
+  top: 19em;
   z-index: 31;
   -ms-transform: rotate(315deg); /* IE 9 */
    -webkit-transform: rotate(315deg); /* Chrome, Safari, Opera */
